Added a background color to the grid items, and changed the styling for the individual borders and font

--- a/style.css
+++ b/style.css
@@ -22,3 +22,9 @@ body{
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
 }
+
+.grid-items{
+  border: 0.1rem solid gray;
+  font-size: 2rem;
+  background-color: white;
+}
