Added border specifics, changed some positioning css

--- a/style.css
+++ b/style.css
@@ -28,3 +28,24 @@ body{
   font-size: 2rem;
   background-color: white;
 }
+
+#box3, #box7, #box10, #box11, #box12, #box15{
+  border-left: 0.5rem solid black;
+}
+
+#box1, #box2, #box3, #box4, #box5, #box8, #box9, #box10, #box11{
+  border-bottom: 0.5rem solid black;
+}
+
+.prompt{
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+
+.answer{
+  width: 50%;
+  height: 50%;
+  text-align: center;
+}
+
